[gd_scene load_steps=2 format=3 uid="uid://skill_menu"]

[ext_resource type="Script" path="res://scripts/ui/skill_menu_ui.gd" id="1_skill"]

[node name="SkillMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_skill")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -250.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 28.0
text = "스킬 선택"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 32.0
offset_right = -8.0
offset_bottom = 160.0

[node name="SkillList" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 165.0
offset_right = -8.0
offset_bottom = 200.0
text = "스킬 설명이 여기에 표시됩니다"
autowrap_mode = 2

[node name="SPCostLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 205.0
offset_right = -8.0
offset_bottom = 225.0
text = "SP: 0"
horizontal_alignment = 2
